--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -6,6 +6,26 @@
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
+
+    //Media: 0 <==> 500px
+    @include media-inf-500px {
+        display: flex;
+        justify-content: center;
+    }
+
+    //Media: 500px <==> 700px
+    @include media-500px-700px {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 17.5px;
+    } 
+
+    //Media: 700px <==> 900px
+    @include media-700px-900px {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 15px;
+    } 
 }
 
 //Paramètres des tags _2
@@ -20,9 +40,34 @@
     justify-content: space-between;
     align-items: center;
     color: $cd-color-accent;
+
+    //Media: 0 <==> 500px
+    @include media-inf-500px {
+        width: 105px;
+        height: 30px;
+        font-size: 15px;
+        margin-bottom: 0px;
+        margin-left: 7.5px;
+        margin-right: 7.5px;
+    }
+
+    //Media: 500px <==> 700px
+    @include media-500px-700px {
+        margin-bottom: 2.5px;
+        margin-left: 10px;
+        margin-right: 10px;
+        height: 32.5px;
+    } 
+    
+    //Media: 700px <==> 900px
+    @include media-700px-900px {
+        margin-bottom: 5px;
+        margin-left: 7.5px;
+        margin-right: 7.5px;
+    } 
 }
 
-// Drop down
+//Drop down
 @mixin dropdown-common {
     width: auto;
     height: auto;
@@ -46,20 +91,121 @@
     border: none;
     cursor: pointer;
 
-    @include media-inf-400px {
+    //Media: 0 <==> 500px
+    @include media-inf-500px {
+        margin-bottom: 20px;
+    }
+
+    //Media: 500px <==> 700px
+    @include media-500px-700px {
+        margin-bottom: 20px;
+    }
+
+    //Media: 700px <==> 900px
+    @include media-700px-900px {
+        margin-bottom: 20px;
+    }
+
+    //Media: 900px <==> 1100px
+    @include media-900px-1100px {
         margin-bottom: 20px;
     }
 }
 
 //Paramètres du panel de la liste des recettes
 @mixin dropdown-Hidden-common {
-    width: 453px;
+    width: 450px;
     border-radius: 5px;
     font-size: 15px;
     font-family: 'Lato', sans-serif;
     font-style: normal;
     color: $cd-color-accent;
     border: none;
+    
+    //Media: 0 <==> 300px
+    @include media-inf-300px {
+        width: 240px;
+    }
+
+    //Media: 0 <==> 500px
+    @include media-inf-500px {
+        padding-top: 0px;
+        margin-left: 0px;
+        margin-bottom: 20px;
+        flex-direction: column;
+    }
+
+    //Media: 300px <==> 350px
+    @include media-300px-350px {
+        width: 270px;
+    }
+
+    //Media: 350px <==> 400px
+    @include media-350px-400px {
+        width: 300px;
+        background-color: mediumseagreen;
+    }
+
+    //Media: 400px <==> 450px
+    @include media-400px-450px {
+        width: 360px;
+        background-color: rgb(245, 242, 105);
+    }
+
+    //Media: 450px <==> 500px
+    @include media-450px-500px {
+        width: 410px;
+        background-color: rgb(116, 80, 13);
+    }
+
+    //Media: 500px <==> 700px
+    @include media-500px-700px {
+        margin-left: 0px;
+        margin-right: 0px;
+        margin-bottom: 20px;
+    }
+
+    //Media: 500px <==> 600px
+    @include media-500px-600px {
+        width: 460px;
+        background-color: rgb(76, 207, 216);
+    }
+
+    //Media: 600px <==> 700px
+    @include media-600px-700px {
+        min-width: 550px;
+        background-color: rgb(9, 10, 78);
+    }
+
+    //Media: 700px <==> 900px
+    @include media-700px-900px {
+        min-width: 650px;
+        margin-left: 0px;
+        margin-bottom: 20px;
+        background-color: rgb(78, 9, 63);
+    }
+
+    //Media: 800px <==> 900px
+    @include media-800px-900px {
+        min-width: 710px;
+        background-color: rgb(196, 211, 62);
+    }
+
+    //Media: 900px <==> 1000px
+    @include media-900px-1000px {
+        width: 400.5px;
+        margin-bottom: 20px;
+        margin-left: 0px;
+        margin-right: 30px;
+    }
+
+    //Media: 1000px <==> 1100px
+    @include media-1000px-1100px {
+        width: 450px;
+        margin-bottom: 20px;
+        margin-left: 0px;
+        margin-right: 30px;
+    }
 }
 
 //Paramètres de l'en-tête des éléments cachés
@@ -77,12 +223,17 @@
     border: none;
 
     & > .specificSearch-input {
-        width: 408px;
+        width: 90%;
         height: 100%;
         font-size: 16px;
         border: none;
         padding-left: 25px;
         border-top-left-radius: 5px;
+
+        //Media: 0 <==> 500px
+        @include media-inf-500px {
+            font-size: 14px;
+        }
     
         &:focus {
             outline: none !important;
@@ -105,9 +256,49 @@
     padding-top: 30px;
     padding-left: 10px;
     padding-right: 10px;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
     font-size: 16px;
     font-weight: 500;
+
+    //Media: 0 <==> 500px
+    @include media-inf-500px {
+        width: 100%;
+        padding-top: 0px;
+        padding-bottom: 20px;
+        overflow-y: auto;
+    }
+
+    //Media: 0 <==> 300px
+    @include media-inf-300px {
+        max-height: 150px;
+        font-size: 13px;
+    }
+
+    //Media: 300px <==> 500px 
+    @include media-300px-500px {
+        max-height: 180px;
+        font-size: 14px;
+        min-width: 80%;
+    }
+
+    //Media: 500px <==> 700px
+    @include media-500px-700px {
+        max-height: 190px;
+        overflow-y: auto;
+        padding-top: 10px;
+    }
+
+    //Media: 700px <==> 900px
+    @include media-700px-900px {
+        max-height: 200px;
+        overflow-y: auto;
+    }
+
+    //Media: 900px <==> 1100px
+    @include media-900px-1100px {
+        max-height: 180px;
+        overflow-y: auto;
+    }
 
     & > .typeOfElement-list {
         display: flex;
@@ -119,7 +310,7 @@
 
 //Paramètres des éléments des "Div" de la liste des recettes
 @mixin recipesElementsList-Div {
-    width: 144px;
+    width: 143px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -130,10 +321,59 @@
     line-height: 30px;
     cursor: pointer;
 
-    @include media-inf-400px {
-        width: 30%;
+    //Media: 0 <==> 500px
+    @include media-inf-500px {
+        width: 33%;
         line-height: 20px; 
+    }
+
+    //Media: 0 <==> 300px
+    @include media-inf-300px { 
         padding-left: 5px;
         padding-right: 5px;
+    }
+
+    //Media: 300px <==> 500px 
+    @include media-300px-500px { 
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    //Media: 500 <==> 600px
+    @include media-500px-600px {
+        line-height: 25px;
+        width: 110px;
+        font-size: 14px;
+    }
+
+    //Media: 600 <==> 700px
+    @include media-600px-700px {
+        line-height: 25px;
+        width: 132px;
+        padding-left: 20px;
+    }
+    
+    //Media: 700px <==> 800px
+    @include media-700px-900px {
+        line-height: 25px;
+        width: 125px;
+        padding-left: 20px;
+        padding-right: 10px;
+    }
+
+    //Media: 800px <==> 900px
+    @include media-800px-900px {
+        width: 115px;
+        padding-left: 10px;
+    }
+
+    //Media: 900px <==> 1000px
+    @include media-900px-1000px {
+        width: 126px;
+    }
+
+    //Media: 1000px <==> 1100px
+    @include media-1000px-1100px {
+        width: 140px;
     }
 }
