--- a/sass/layouts/_searchBadgeDrop.scss
+++ b/sass/layouts/_searchBadgeDrop.scss
@@ -34,6 +34,11 @@
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+
+            //Media: 0 <==> 500px
+            @include media-inf-500px {
+                font-size: 13px;
+            }
         }
     
         &--closeCross {
@@ -111,11 +116,15 @@
     width: 100%;
     height: auto;
     margin-bottom: 10px;
+
+    @include media-inf-500px {
+        margin-bottom: 20px;
+    }
 }
 
 .Badge {
     @include badge-base-parameter;
-
+    
     &__tagIngredient {
         @include badge-tags-parameter;
         border: 1px solid $cd-color-ingredient;
@@ -198,6 +207,45 @@
     align-items: flex-start;
     color: $cd-color-accent;
     position: absolute;
+
+    //Media: 0 <==> 500px
+    @include media-inf-500px {
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: center;
+        width: 100%;
+        position: unset;
+        margin-bottom: -20px;
+    }
+
+    //Media: 500px <==> 700px
+    @include media-500px-700px {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        max-width: 100%;
+        position: unset;
+        margin-bottom: -20px;
+    }
+
+    //Media: 700px <==> 900px
+    @include media-700px-900px {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        max-width: 100%;
+        position: unset;
+        margin-bottom: -20px;
+    }
+
+    //Media: 900px <==> 1100px
+    @include media-900px-1100px {
+        flex-direction: row;
+        flex-wrap: wrap;
+        max-width: 100%;
+        position: unset;
+        margin-bottom: -20px;
+    }
 }
 
 //Ingredients
@@ -207,6 +255,17 @@
     &__openBtn {
         @include dropdown-Btn-common;
         background-color: $cd-color-ingredient;
+
+        //Media: 500px <==> 700px
+        @include media-500px-700px {
+            margin-left: 15px;
+            margin-right: 15px;
+        }
+
+        //Media: 900px <==> 1100px
+        @include media-900px-1100px {
+            margin-right: 30px;
+        }
 
         &:hover {
             background: darken($color: $cd-color-ingredient, $amount: 15);
@@ -219,6 +278,7 @@
         @include dropdown-Hidden-common;
         background-color: $cd-color-ingredient;
         max-height: 1505px;
+        display: none;
 
         &--header {
             @include hiddenElt-header-common;
@@ -248,7 +308,6 @@
                 }
             }
         }
-        display: none;
     }
 }
 
@@ -260,7 +319,21 @@
         @include dropdown-Btn-common;
         background-color: $cd-color-appliance;
         margin-left: 30px;
-        @include media-inf-400px {
+        
+        //Media: 0 <==> 500px
+        @include media-inf-500px {
+            margin-left: 0px;
+        }
+
+        //Media: 500px <==> 700px
+        @include media-500px-700px {
+            margin-left: 15px;
+            margin-right: 15px;
+        }
+
+        //Media: 900px <==> 1100px
+        @include media-900px-1100px {
+            margin-right: 30px;
             margin-left: 0px;
         }
 
@@ -276,6 +349,7 @@
         background-color: $cd-color-appliance;
         max-height: 245px;
         margin-left: 30px;
+        display: none;
 
         &--header {
             @include hiddenElt-header-common;
@@ -305,7 +379,6 @@
                 }
             }
         }
-        display: none;
     }
 }
 
@@ -317,7 +390,20 @@
         @include dropdown-Btn-common;
         background-color: $cd-color-ustensil;
         margin-left: 30px;
-        @include media-inf-400px {
+
+        //Media: 0 <==> 500px
+        @include media-inf-500px {
+            margin-left: 0px;
+        }
+
+        //Media: 500px <==> 700px
+        @include media-500px-700px {
+            margin-left: 15px;
+            margin-right: 15px;
+        }
+
+        //Media: 900px <==> 1100px
+        @include media-900px-1100px {
             margin-left: 0px;
         }
 
@@ -333,6 +419,7 @@
         background-color: $cd-color-ustensil;
         max-height: 415px;
         margin-left: 30px;
+        display: none;
 
         &--header {
             @include hiddenElt-header-common;
@@ -362,10 +449,5 @@
                 }
             }
         }
-        display: none;
     }
 }
-
-
-
-
