--- a/sass/layouts/_container.scss
+++ b/sass/layouts/_container.scss
@@ -23,31 +23,46 @@
 
     //Media: 0 <==> 300px
     @include media-inf-300px {
-        max-width: 300px; 
-        background-color: aqua;
+        max-width: 300px;
     }
 
     //Media: 300px <==> 500px
     @include media-300px-500px {
         max-width: 500px;
-        background-color: thistle;
     }
 
     //Media: 500px <==> 700px
     @include media-500px-700px {
         max-width: 700px;
-        background-color: rgb(208, 216, 191);
     }
 
     //Media: 700px <==> 900px
     @include media-700px-900px {
         max-width: 900px;
-        background-color: rgb(225, 193, 240);
     }
 
     //Media: 900px <==> 1100px
     @include media-900px-1100px {
         max-width: 1100px;
-        background-color: rgb(83, 14, 116);
+    }
+
+    //Media: 1100px <==> 1299px
+    @include media-1101px-1299px {
+        max-width: 1300px;
+    }
+
+    //Media: 1300px <==> 1350px
+    @include media-1300px-1350px {
+        max-width: 1350px;
+    }
+
+    //Media: 1350px <==> 1450px
+    @include media-1350px-1450px {
+        max-width: 1450px;
+    }
+
+    //Media 1450px-sup 
+    @include media-1450px-sup {
+        max-width: 1450px;
     }
 }
