--- a/sass/layouts/_searchBadgeDrop.scss
+++ b/sass/layouts/_searchBadgeDrop.scss
@@ -242,9 +242,18 @@
     @include media-900px-1100px {
         flex-direction: row;
         flex-wrap: wrap;
+        justify-content: center;
         max-width: 100%;
         position: unset;
         margin-bottom: -20px;
+    }
+
+    //Media: 1100px <==> 1299px
+    @include media-1101px-1299px {
+        flex-direction: row;
+        flex-wrap: wrap;
+        max-width: 100%;
+        position: absolute;
     }
 }
 
@@ -267,6 +276,11 @@
             margin-right: 30px;
         }
 
+        //Media: 1100px <==> 1299px
+        @include media-1101px-1299px {
+            margin-right: 20px;
+        }
+
         &:hover {
             background: darken($color: $cd-color-ingredient, $amount: 15);
             transition: linear 300ms;
@@ -279,6 +293,12 @@
         background-color: $cd-color-ingredient;
         max-height: 1505px;
         display: none;
+
+        //Media: 900px <==> 1100px
+        @include media-900px-1100px {
+            margin-right: 15px;
+            margin-left: 15px;
+        }
 
         &--header {
             @include hiddenElt-header-common;
@@ -337,6 +357,12 @@
             margin-left: 0px;
         }
 
+        //Media: 1100px <==> 1299px
+        @include media-1101px-1299px {
+            margin-right: 20px;
+            margin-left: 0px;
+        }
+
         &:hover {
             background: darken($color: $cd-color-appliance, $amount: 15);
             transition: linear 300ms;
@@ -350,6 +376,12 @@
         max-height: 245px;
         margin-left: 30px;
         display: none;
+
+        //Media: 900px <==> 1100px
+        @include media-900px-1100px {
+            margin-right: 15px;
+            margin-left: 15px;
+        }
 
         &--header {
             @include hiddenElt-header-common;
@@ -407,6 +439,11 @@
             margin-left: 0px;
         }
 
+        //Media: 1100px <==> 1299px
+        @include media-1101px-1299px {
+            margin-left: 0px;
+        }
+
         &:hover {
             background: darken($color: $cd-color-ustensil, $amount: 15);
             transition: linear 300ms;
@@ -420,6 +457,11 @@
         max-height: 415px;
         margin-left: 30px;
         display: none;
+
+        //Media: 900px <==> 1100px
+        @include media-900px-1100px {
+            margin-left: 0px;
+        }
 
         &--header {
             @include hiddenElt-header-common;
