--- a/css/style.css
+++ b/css/style.css
@@ -530,22 +530,7 @@
   cursor: pointer;
   background-color: #3282F7;
 }
-@media screen and (max-width: 500px) {
-  .ingredientDropdown__openBtn {
-    margin-bottom: 20px;
-  }
-}
-@media (min-width: 500px) and (max-width: 700px) {
-  .ingredientDropdown__openBtn {
-    margin-bottom: 20px;
-  }
-}
-@media (min-width: 700px) and (max-width: 900px) {
-  .ingredientDropdown__openBtn {
-    margin-bottom: 20px;
-  }
-}
-@media (min-width: 900px) and (max-width: 1100px) {
+@media screen and (max-width: 1100px) {
   .ingredientDropdown__openBtn {
     margin-bottom: 20px;
   }
@@ -898,22 +883,7 @@
   background-color: #68D9A4;
   margin-left: 30px;
 }
-@media screen and (max-width: 500px) {
-  .applianceDropdown__openBtn {
-    margin-bottom: 20px;
-  }
-}
-@media (min-width: 500px) and (max-width: 700px) {
-  .applianceDropdown__openBtn {
-    margin-bottom: 20px;
-  }
-}
-@media (min-width: 700px) and (max-width: 900px) {
-  .applianceDropdown__openBtn {
-    margin-bottom: 20px;
-  }
-}
-@media (min-width: 900px) and (max-width: 1100px) {
+@media screen and (max-width: 1100px) {
   .applianceDropdown__openBtn {
     margin-bottom: 20px;
   }
@@ -1274,22 +1244,7 @@
   background-color: #ED6454;
   margin-left: 30px;
 }
-@media screen and (max-width: 500px) {
-  .ustensilDropdown__openBtn {
-    margin-bottom: 20px;
-  }
-}
-@media (min-width: 500px) and (max-width: 700px) {
-  .ustensilDropdown__openBtn {
-    margin-bottom: 20px;
-  }
-}
-@media (min-width: 700px) and (max-width: 900px) {
-  .ustensilDropdown__openBtn {
-    margin-bottom: 20px;
-  }
-}
-@media (min-width: 900px) and (max-width: 1100px) {
+@media screen and (max-width: 1100px) {
   .ustensilDropdown__openBtn {
     margin-bottom: 20px;
   }
@@ -1667,16 +1622,9 @@
     margin-top: 70px;
   }
 }
-@media (min-width: 1300px) and (max-width: 1350px) {
+@media (min-width: 1300px) and (max-width: 1450px) {
   .thumbCard-section {
-    justify-content: space-between;
-    padding-right: 0px;
-    padding-left: 0px;
-  }
-}
-@media (min-width: 1350px) and (max-width: 1450px) {
-  .thumbCard-section {
-    justify-content: space-between;
+    justify-content: center;
     padding-right: 0px;
     padding-left: 0px;
   }
